<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomros_lane_detection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mbrede@todo.todo">mbrede</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>nav2_common</build_depend>



  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>paho-mqtt-cpp</depend>
  <depend>iceoryx_msg</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>nav2_core</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>nav2_util</build_depend>
  <build_depend>nav2_msgs</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <costmap_2d plugin="${prefix}/params/lane_layer.xml" />
    <nav2_core plugin="${prefix}/params/lane_controller_plugin.xml" />
    <nav2_core plugin="${prefix}/params/behaviour_plugin.xml" />
    <build_type>ament_cmake</build_type>
  </export>


</package>
